--- a/index.css
+++ b/index.css
@@ -1,17 +1,18 @@
 body{
-    margin: 0%;
-    display: flex; 
-    justify-content: center;
-    background-color: hsl(210, 46%, 95%);
-    padding-top: 35px;
+    margin: 0;
 }
 
-body .frame{
-    height: 660px;
-    width: 1260px;
+.slot{
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.frame{
     display: grid;
-    grid-template-columns: 300px 300px 300px 300px;
-    grid-template-rows: 320px 320px;
+    grid-template-columns: repeat(4, 280px);
+    grid-template-rows: 280px 270px;
     gap: 20px;
 }
 
@@ -49,8 +50,8 @@ body .frame{
 .frame .head{
     display: flex;
     align-items: center;
-    gap: 1rem;
-    margin: 20px 30px 20px 30px;
+    gap: 20px;
+    margin: 15px 30px 15px 30px;
 }
 
 .frame .head img{
@@ -72,18 +73,18 @@ body .frame{
 .frame .text{
     color: hsl(0, 0%, 100%);
     margin: 20px 30px 20px 30px;
-    font-size: 22px;
+    font-size: 20px;
 }
 
 .frame .para{
-    margin: 20px 30px 30px 30px;
-    font-size: 15.5px;
+    margin: 20px 30px 20px 30px;
+    font-size: 13px;
     color: hsl(0, 0%, 81%);
 }
 
 .frame .para1{
-    margin: 20px 30px 20px 30px;
-    font-size: 16px;
+    margin: 15px 30px 15px 30px;
+    font-size: 13px;
     color: hsl(0, 0%, 81%);
 }
 
@@ -96,26 +97,49 @@ body .frame{
 .frame .text1{
     color: hsl(0, 0%, 0%);
     margin: 20px 30px 20px 30px;
-    font-size: 26px;
+    font-size: 25px;
 }
 
 .frame .fourth .text1{
-    font-size: 26px;
-    margin-right: 25px;
+    font-size: 22px;
+    margin: 20px 30px 20px 30px;
 }
 
-@media (min-width:372px) and (max-width:639px) {
+.third .para1{
+    font-size: 14px;
+}
+
+@media (min-width:640px) and (max-width:1280px) {
     body .frame{
-        height: 100vh;
-        justify-content: center;
-        grid-template-columns: 350px;
-        grid-template-rows: 280px 210px 280px 270px 280px 140px 280px 280px;
+        height: 100%;
+        display: grid;
+        grid-template-columns: 300px 300px;
+        grid-template-rows: repeat(4, auto); 
+
     }
 
+    .slot{
+        height: 100%;
+    }
+
+    body{
+        margin: 30px 0 30px 0;
+    }
+} 
+
+@media (min-width:358px) and (max-width:639px) {
+    body .frame{
+        height: 100%;
+        grid-template-columns: 300px;
+        grid-template-rows: repeat(8, auto);
+    }
+
+    .slot{
+        height: 100%;
+    }
     
     body{
-        height: 2160px;
-        padding: 50px ;
+        margin: 30px 0 30px 0;
     }
 
     .frame .first{
@@ -132,31 +156,4 @@ body .frame{
     }
 }
 
-@media (min-width:640px) and (max-width:1280px) {
-    body .frame{
-        height: 100vh;
-        width: 620px;
-        display: grid;
-        grid-template-columns: 300px 300px;
-        grid-template-rows: repeat(4, 320px);
-        gap: 20px; 
-    }
 
-    body{
-        height: 1340px;
-        padding: 50px ;
-    }
-    
-    .frame .first{
-        grid-column: span 2;
-     }
-    
-    .frame .third{
-        grid-row: span 2;
-    }
-    
-    .frame .fifth{
-        grid-column: span 2;
-    }
-    
-}
