--- a/index.css
+++ b/index.css
@@ -1,4 +1,5 @@
 body{
+    background-color: hsl(210, 46%, 95%);
     margin: 0;
 }
 
@@ -12,7 +13,7 @@ body{
 .frame{
     display: grid;
     grid-template-columns: repeat(4, 280px);
-    grid-template-rows: 280px 270px;
+    grid-template-rows: repeat(2, auto);
     gap: 20px;
 }
 
